final update for mid term

--- a/contact/contact1.html
+++ b/contact/contact1.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 
-<frameset rows="30%,*">
-  <frame src="frame_a.html" frameborder="0"   scrolling="no" target="_self">
-  <frameset cols="10%,75%" >
-    <frame src="frame_b.html" noresize  frameborder="0"  scrolling="no">
-    <frame src="contactform.html" name="content" noresize  frameborder="0"  scrolling="no">
+<frameset rows="35%,30%,*"> <!--3 rows of 35, 30 remaining -->
+  <frame src="frame_a.html" frameborder="0"   scrolling="no" target="_self">  <!--menu-->
+
+    <frame src="frame_b.html" noresize  frameborder="0"  scrolling="no"> <!--menu adress contact form-->
+    <frame src="contactform.html" name="content" noresize  frameborder="0" > <!--content-->
   </frameset>
-</frameset>
+
 
 </html>
