--- a/contact/contactform.html
+++ b/contact/contactform.html
@@ -12,7 +12,7 @@
                  text-align: center;
                 background-color: black;
                 color: white;
-                opacity: .6;
+                opacity: .6; /* transparancy */
                 padding-top: 10%;
                 
             }
