--- a/contact/frame_a.html
+++ b/contact/frame_a.html
@@ -1,3 +1,5 @@
+<html>
+<head>
 <link rel="stylesheet" href="stylesheet.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
@@ -120,11 +122,11 @@
   </div>
 
   <ul class="navi">
-    <li><a class="active" href="home.html">Home</a></li>
-    <li><a href="signup/register.html">Teacher</a></li>
-    <li><a href="signup/sregister.html">Student</a></li>
-    <li><a href="login.html">login</a></li>
-    <li><a href="contact/contact1.html">Contact</a></li>
+    <li><a  href="../index.html" target="_top">Home</a></li>
+    <li><a href="../signup/register.html" target="_top">Teacher</a></li>
+    <li><a href="../signup/sregister.html" target="_top">Student</a></li>
+    <li><a href="../login.html" target="_top">login</a></li>
+    <li><a href="../contact/contact1.html" target="_top" class="active">Contact</a></li>
   </ul>
   <br>
   <br>
