--- a/signup/register.html
+++ b/signup/register.html
@@ -203,11 +203,11 @@
   </div>
 
   <ul class="navi" >
-    <li><a  href="home.html">Home</a></li>
-    <li><a class="active" href="signup/register.html">Teacher</a></li>
-    <li><a href="signup/sregister.html">Student</a></li>
-    <li><a href="login.html">login</a></li>
-    <li><a href="contact/contact1.html">Contact</a></li>
+    <li><a  href="../index.html">Home</a></li>
+    <li><a class="active" href="../signup/register.html">Teacher</a></li>
+    <li><a href="../signup/sregister.html">Student</a></li>
+    <li><a href="../login.html">login</a></li>
+    <li><a href="../contact/contact1.html">Contact</a></li>
   </ul>
   <br>
 
